# hello-ogre-next

./: .gitignore  CMakeLists.txt  Hlms.h  README.md  WindowEventListener.h  install-ogre-next.sh  main.cpp  ogre.cfg  plugins.cfg  resources.cfg  resources2.cfg  resources_d.cfg  setup.sh  unsetup.sh  utils.h
Media/models/: ogrehead-2.mesh
